VPC/vpc1Pub1Pri.yaml
AWSTemplateFormatVersion: '2010-09-09'
Parameters:
  VpcCidr:
    Type: String
    Description: Designated IP range for the vpc
    AllowedPattern: '((\d{1,3})\.){3}\d{1,3}/\d{1,2}'
  VpcName:
    Type: String 
    AllowedPattern: '[A-Za-z]+'
  Environment: 
    Type: String 
    AllowedPattern: '[A-Za-z]+'
    Description: Environment to be provisioned for, will tag all resources with this value
  PublicSubnetCidr:
    Type: String 
    AllowedPattern: '((\d{1,3})\.){3}\d{1,3}/\d{1,2}'
    Description: Address range for public subnet one
  PrivateSubnetCidr: 
    Type: String 
    AllowedPattern: '((\d{1,3})\.){3}\d{1,3}/\d{1,2}'  
Mappings:
  SubnetForRegion:
    # I am trialling this stack in tokyo region so am only adding ap-northeast-1 for now
    ap-northeast-1:
      AvailabilityZoneOne: "ap-northeast-1a"
      AvailabilityZoneTwo: "ap-northeast-1c"
Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VpcCidr
      EnableDnsSupport: 'true'
      EnableDnsHostnames: 'true'
      InstanceTenancy: default
      Tags:
      - Key: Name
        Value: !Join
          - '-' 
          -
            - !Ref VpcName
            - !Ref Environment
  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
      - Key: Name
        Value: !Join
          - '-' 
          -
            - !Ref VpcName
            - !Ref Environment
            - "InternetGateway"
  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId:
        Ref: VPC
      InternetGatewayId:
        Ref: InternetGateway
  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: VPC
      Tags:
      - Key: Name
        Value: !Join
          - '-' 
          -
            - !Ref VpcName
            - !Ref Environment
            - "PublicRouteTable"
  PublicRoute:
    Type: AWS::EC2::Route
    DependsOn: InternetGateway
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway
  PublicSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: VPC
      CidrBlock: !Ref PublicSubnetCidr
      AvailabilityZone: !FindInMap [ SubnetForRegion, !Ref "AWS::Region", "AvailabilityZoneOne" ]
      MapPublicIpOnLaunch: 'true'         
      Tags:
      - Key: Name
        Value: !Join
          - '-' 
          -
            - !FindInMap [ SubnetForRegion, !Ref "AWS::Region", "AvailabilityZoneOne" ]
            - !Ref Environment
            - "Public"
  AssociatePublicSubnet:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties: 
      SubnetId: !Ref PublicSubnet
      RouteTableId: !Ref PublicRouteTable
  PrivateSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: VPC
      CidrBlock: !Ref PrivateSubnetCidr
      AvailabilityZone: !FindInMap [ SubnetForRegion, !Ref "AWS::Region", "AvailabilityZoneTwo" ]
      MapPublicIpOnLaunch: 'false'
      Tags:
      - Key: Name
        Value: !Join
          - '-' 
          -
            - !FindInMap [ SubnetForRegion, !Ref "AWS::Region", "AvailabilityZoneTwo" ]
            - !Ref Environment
            - "Private"
  PrivateRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: VPC
      Tags:
      - Key: Name
        Value: !Join
          - '-' 
          -
            - !Ref VpcName
            - !Ref Environment
            - "PrivateRouteTable"
  PrivateRoute:
    Type: AWS::EC2::Route
    DependsOn: NatGateway
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway
  NatGateway:
    Type: AWS::EC2::NatGateway 
    Properties:
      AllocationId:
        Fn::GetAtt:
        - EIP
        - AllocationId
      SubnetId:
        Ref: PublicSubnet
      Tags:
      - Key: Name
        Value: !Join
          - '-' 
          -
            - !Ref VpcName
            - !Ref Environment
            - !FindInMap [ SubnetForRegion, !Ref "AWS::Region", "AvailabilityZoneOne" ]
            - "NatGateway"
  EIP:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
Outputs:
  StackVPC:
    Description: The ID of the VPC
    Value: !Ref VPC
    Export:
      Name: !Sub "${AWS::StackName}-VPCID"
  PublicSubnet:
    Description: Public subnet ID
    Value: !Ref PublicSubnet
    Export:
      Name: !Sub "${AWS::StackName}-PublicSubnet"
  PrivateSubnet:
    Description: Private Subnet Id
    Value: !Ref PrivateSubnet
    Export:
      Name: !Sub "${AWS::StackName}-PrivateSubnet"
