VPC/vpc3Pub3Pri.yaml
AWSTemplateFormatVersion: '2010-09-09'
Parameters:
  VpcCidr:
    Type: String
    Description: Designated IP range for the vpc
    AllowedPattern: '((\d{1,3})\.){3}\d{1,3}/\d{1,2}'
  VpcName:
    Type: String 
    AllowedPattern: '[A-Za-z]+'
  Environment: 
    Type: String 
    AllowedPattern: '[A-Za-z]+'
    Description: Environment to be provisioned for, will tag all resources with this value
  PublicSubnetOneCidr:
    Type: String 
    AllowedPattern: '((\d{1,3})\.){3}\d{1,3}/\d{1,2}'
    Description: Address range for public subnet one
  PublicSubnetTwoCidr:
    Type: String 
    AllowedPattern: '((\d{1,3})\.){3}\d{1,3}/\d{1,2}'
    Description: Address range for public subnet two
  PublicSubnetThreeCidr:
    Type: String 
    AllowedPattern: '((\d{1,3})\.){3}\d{1,3}/\d{1,2}'
    Description: Address range for public subnet three
  PrivateSubnetOneCidr: 
    Type: String 
    AllowedPattern: '((\d{1,3})\.){3}\d{1,3}/\d{1,2}' 
  PrivateSubnetTwoCidr: 
    Type: String 
    AllowedPattern: '((\d{1,3})\.){3}\d{1,3}/\d{1,2}' 
  PrivateSubnetThreeCidr: 
    Type: String 
    AllowedPattern: '((\d{1,3})\.){3}\d{1,3}/\d{1,2}'  
Mappings:
  SubnetForRegion:
    # I am trialling this stack in tokyo region so am only adding ap-northeast-1 for now
    ap-northeast-1:
      AvailabilityZoneOne: "ap-northeast-1a"
      AvailabilityZoneTwo: "ap-northeast-1c"
      AvailabilityZoneThree: "ap-northeast-1d"
Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VpcCidr
      EnableDnsSupport: 'true'
      EnableDnsHostnames: 'true'
      InstanceTenancy: default
      Tags:
      - Key: Name
        Value: !Join
          - '-' 
          -
            - !Ref VpcName
            - !Ref Environment
  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
      - Key: Name
        Value: !Join
          - '-' 
          -
            - !Ref VpcName
            - !Ref Environment
            - "InternetGateway"
  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId:
        Ref: VPC
      InternetGatewayId:
        Ref: InternetGateway
  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: VPC
      Tags:
      - Key: Name
        Value: !Join
          - '-' 
          -
            - !Ref VpcName
            - !Ref Environment
            - "PublicRouteTable"
  PublicRoute:
    Type: AWS::EC2::Route
    DependsOn: InternetGateway
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway
  PublicSubnetA:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: VPC
      CidrBlock: !Ref PublicSubnetOneCidr
      AvailabilityZone: !FindInMap [ SubnetForRegion, !Ref "AWS::Region", "AvailabilityZoneOne" ]
      MapPublicIpOnLaunch: 'true'         
      Tags:
      - Key: Name
        Value: !Join
          - '-' 
          -
            - !FindInMap [ SubnetForRegion, !Ref "AWS::Region", "AvailabilityZoneOne" ]
            - !Ref Environment
            - "Public"
  PublicSubnetB:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: VPC
      CidrBlock: !Ref PublicSubnetTwoCidr
      AvailabilityZone: !FindInMap [ SubnetForRegion, !Ref "AWS::Region", "AvailabilityZoneTwo" ]
      MapPublicIpOnLaunch: 'true'
      Tags:
      - Key: Name
        Value: !Join
          - '-' 
          -
            - !FindInMap [ SubnetForRegion, !Ref "AWS::Region", "AvailabilityZoneTwo" ]
            - !Ref Environment
            - "Public"
  PublicSubnetC:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: VPC
      CidrBlock: !Ref PublicSubnetThreeCidr
      AvailabilityZone: !FindInMap [ SubnetForRegion, !Ref "AWS::Region", "AvailabilityZoneThree" ]
      MapPublicIpOnLaunch: 'true'
      Tags:
      - Key: Name
        Value: !Join
          - '-' 
          -
            - !FindInMap [ SubnetForRegion, !Ref "AWS::Region", "AvailabilityZoneThree" ]
            - !Ref Environment
            - "Public"
  AssociateSubnetOne:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties: 
      SubnetId: !Ref PublicSubnetA
      RouteTableId: !Ref PublicRouteTable
  AssociateSubnetTwo:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties: 
      SubnetId: !Ref PublicSubnetB
      RouteTableId: !Ref PublicRouteTable
  AssociateSubnetThree:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties: 
      SubnetId: !Ref PublicSubnetC
      RouteTableId: !Ref PublicRouteTable
  PrivateSubnetA:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: VPC
      CidrBlock: !Ref PrivateSubnetOneCidr
      AvailabilityZone: !FindInMap [ SubnetForRegion, !Ref "AWS::Region", "AvailabilityZoneOne" ]
      MapPublicIpOnLaunch: 'false'
      Tags:
      - Key: Name
        Value: !Join
          - '-' 
          -
            - !FindInMap [ SubnetForRegion, !Ref "AWS::Region", "AvailabilityZoneOne" ]
            - !Ref Environment
            - "Private"
  PrivateSubnetB:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: VPC
      CidrBlock: !Ref PrivateSubnetTwoCidr
      AvailabilityZone: !FindInMap [ SubnetForRegion, !Ref "AWS::Region", "AvailabilityZoneTwo" ]
      MapPublicIpOnLaunch: 'false'
      Tags:
      - Key: Name
        Value: !Join
          - '-' 
          -
            - !FindInMap [ SubnetForRegion, !Ref "AWS::Region", "AvailabilityZoneTwo" ]
            - !Ref Environment
            - "Private"
  PrivateSubnetC:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: VPC
      CidrBlock: !Ref PrivateSubnetThreeCidr
      AvailabilityZone: !FindInMap [ SubnetForRegion, !Ref "AWS::Region", "AvailabilityZoneThree" ]
      MapPublicIpOnLaunch: 'false'
      Tags:
      - Key: Name
        Value: !Join
          - '-' 
          -
            - !FindInMap [ SubnetForRegion, !Ref "AWS::Region", "AvailabilityZoneThree" ]
            - !Ref Environment
            - "Private"
  PrivateRouteTableA:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: VPC
      Tags:
      - Key: Name
        Value: !Join
          - '-' 
          -
            - !Ref VpcName
            - !Ref Environment
            - "PrivateRouteTableA"
  PrivateRouteTableB:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: VPC
      Tags:
      - Key: Name
        Value: !Join
          - '-' 
          -
            - !Ref VpcName
            - !Ref Environment
            - "PrivateRouteTableB"
  PrivateRouteTableC:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: VPC
      Tags:
      - Key: Name
        Value: !Join
          - '-' 
          -
            - !Ref VpcName
            - !Ref Environment
            - "PrivateRouteTableC"
  PrivateRouteA:
    Type: AWS::EC2::Route
    DependsOn: NatGatewayA
    Properties:
      RouteTableId: !Ref PrivateRouteTableA
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGatewayA 
  PrivateRouteB:
    Type: AWS::EC2::Route
    DependsOn: NatGatewayB
    Properties:
      RouteTableId: !Ref PrivateRouteTableB
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGatewayB 
  PrivateRouteC:
    Type: AWS::EC2::Route
    DependsOn: NatGatewayC
    Properties:
      RouteTableId: !Ref PrivateRouteTableC
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGatewayC 
  NatGatewayA:
    Type: AWS::EC2::NatGateway 
    Properties:
      AllocationId:
        Fn::GetAtt:
        - EIPA
        - AllocationId
      SubnetId:
        Ref: PublicSubnetA
      Tags:
      - Key: Name
        Value: !Join
          - '-' 
          -
            - !Ref VpcName
            - !Ref Environment
            - !FindInMap [ SubnetForRegion, !Ref "AWS::Region", "AvailabilityZoneOne" ]
            - "NatGateway"
  NatGatewayB:
    Type: AWS::EC2::NatGateway 
    Properties:
      AllocationId:
        Fn::GetAtt:
        - EIPB
        - AllocationId
      SubnetId:
        Ref: PublicSubnetB
      Tags:
      - Key: Name
        Value: !Join
          - '-' 
          -
            - !Ref VpcName
            - !Ref Environment
            - !FindInMap [ SubnetForRegion, !Ref "AWS::Region", "AvailabilityZoneTwo" ]
            - "NatGateway"
  NatGatewayC:
    Type: AWS::EC2::NatGateway 
    Properties:
      AllocationId:
        Fn::GetAtt:
        - EIPC
        - AllocationId
      SubnetId:
        Ref: PublicSubnetC
      Tags:
      - Key: Name
        Value: !Join
          - '-' 
          -
            - !Ref VpcName
            - !Ref Environment
            - !FindInMap [ SubnetForRegion, !Ref "AWS::Region", "AvailabilityZoneThree" ]
            - "NatGateway"
  EIPA:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
  EIPB:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
  EIPC:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
